kubernetes/overlays/infrastructure/kube-cbr/config/kube-system/network-policies/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
